// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scoreDay dm-15m-day1 1`] = `
Object {
  "class": "15m",
  "competition": Object {
    "description": "Stendal-Borstel (EDOV) 7/4/2017-7/14/2017",
    "name": "Deutsche Segelflug-Meisterschaft 15m/18m/OK",
  },
  "date": "2017-07-04",
  "remark": "Pmax=1000,0 Pdm=447,6 Pvm=552,4 Do=400,3 f=1,000 N=35 n1=33 n2=29
dnf=did not flyVerwarnung: Loggerabgabe zu spät",
  "results": Array [
    Object {
      "competitionId": "EL",
      "country": "BW | FSV Sindelfingen",
      "distance": 400.3,
      "glider": "Discus 2b",
      "name": "Nölke, Sören",
      "penaltyPoints": 0,
      "points": 1000,
      "rank": 1,
      "speed": 27.98333333333333,
      "taskStartTime": "12:58:56",
      "time": 14307,
    },
    Object {
      "competitionId": "PE",
      "country": "BW | FG Blaubeuren",
      "distance": 400.3,
      "glider": "Ventus 2a",
      "name": "Bauder, Sebastian",
      "penaltyPoints": 0,
      "points": 953,
      "rank": 2,
      "speed": 27.19722222222222,
      "taskStartTime": "12:53:09",
      "time": 14720,
    },
    Object {
      "competitionId": "V",
      "country": "HE | LSC Bad Homburg",
      "distance": 400.3,
      "glider": "Discus 2a",
      "name": "Omsels, Jan",
      "penaltyPoints": 0,
      "points": 951,
      "rank": 3,
      "speed": 27.16111111111111,
      "taskStartTime": "12:52:57",
      "time": 14739,
    },
    Object {
      "competitionId": "PS",
      "country": "HE | Rhönflug Poppenhausen",
      "distance": 400.3,
      "glider": "ASW 27",
      "name": "Mihm, Julian",
      "penaltyPoints": 0,
      "points": 924,
      "rank": 4,
      "speed": 26.705555555555556,
      "taskStartTime": "12:53:28",
      "time": 14991,
    },
    Object {
      "competitionId": "4Z",
      "country": "BY | LSV Landshut",
      "distance": 400.3,
      "glider": "Ventus 2a",
      "name": "Lichtmannecker, Stefan",
      "penaltyPoints": 0,
      "points": 912,
      "rank": 5,
      "speed": 26.49722222222222,
      "taskStartTime": "12:49:55",
      "time": 15108,
    },
    Object {
      "competitionId": "BK",
      "country": "BW | FSV Sindelfingen",
      "distance": 400.3,
      "glider": "ASG 29 E",
      "name": "Senne, Katrin U.",
      "penaltyPoints": 0,
      "points": 909,
      "rank": 6,
      "speed": 26.45,
      "taskStartTime": "12:49:26",
      "time": 15136,
    },
    Object {
      "competitionId": "LEO",
      "country": "RP | DJK SFG Landau",
      "distance": 400.3,
      "glider": "ASG 29",
      "name": "Theisinger, Georg",
      "penaltyPoints": 0,
      "points": 904,
      "rank": 7,
      "speed": 26.363888888888887,
      "taskStartTime": "12:44:57",
      "time": 15185,
    },
    Object {
      "competitionId": "AS",
      "country": "BW | AC Esslingen",
      "distance": 400.3,
      "glider": "Ventus 2a",
      "name": "Späth, Alexander",
      "penaltyPoints": 0,
      "points": 904,
      "rank": 7,
      "speed": 26.36111111111111,
      "taskStartTime": "12:48:57",
      "time": 15186,
    },
    Object {
      "competitionId": "FH",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 400.3,
      "glider": "Ventus 2a",
      "name": "Hein, Freddy",
      "penaltyPoints": 0,
      "points": 903,
      "rank": 9,
      "speed": 26.338888888888885,
      "taskStartTime": "12:48:53",
      "time": 15199,
    },
    Object {
      "competitionId": "BS",
      "country": "BY | LSV Regensburg",
      "distance": 400.3,
      "glider": "ASG 29 E",
      "name": "Mühl, Stefanie",
      "penaltyPoints": 0,
      "points": 902,
      "rank": 10,
      "speed": 26.333333333333332,
      "taskStartTime": "12:49:30",
      "time": 15202,
    },
    Object {
      "competitionId": "DM",
      "country": "HH | Hamburger VfL",
      "distance": 400.3,
      "glider": "Ventus 2a",
      "name": "Büttner, Martin",
      "penaltyPoints": 0,
      "points": 898,
      "rank": 11,
      "speed": 26.255555555555553,
      "taskStartTime": "12:48:00",
      "time": 15247,
    },
    Object {
      "competitionId": "3G",
      "country": "NW | LfV Greven",
      "distance": 400.3,
      "glider": "Ventus 2b",
      "name": "Pfennig, Michael",
      "penaltyPoints": 0,
      "points": 895,
      "rank": 12,
      "speed": 26.21111111111111,
      "taskStartTime": "12:47:53",
      "time": 15273,
    },
    Object {
      "competitionId": "19",
      "country": "BW | FG Neckartal Köngen",
      "distance": 400.3,
      "glider": "Ventus 2a",
      "name": "Wettemann, Thomas",
      "penaltyPoints": 0,
      "points": 894,
      "rank": 13,
      "speed": 26.191666666666666,
      "taskStartTime": "12:46:29",
      "time": 15284,
    },
    Object {
      "competitionId": "LT",
      "country": "RP | DJK SFG Landau",
      "distance": 400.3,
      "glider": "ASG 29",
      "name": "Theisinger, Laurenz",
      "penaltyPoints": 0,
      "points": 891,
      "rank": 14,
      "speed": 26.136111111111113,
      "taskStartTime": "12:45:11",
      "time": 15317,
    },
    Object {
      "competitionId": "EX",
      "country": "BW | FG Neckartal Köngen",
      "distance": 400.3,
      "glider": "Ventus 2ax",
      "name": "Eisele, Michael",
      "penaltyPoints": 0,
      "points": 888,
      "rank": 15,
      "speed": 26.09166666666667,
      "taskStartTime": "12:46:33",
      "time": 15344,
    },
    Object {
      "competitionId": "FT",
      "country": "RP | DJK SFG Landau",
      "distance": 400.3,
      "glider": "ASW 27",
      "name": "Frey, Yannick",
      "penaltyPoints": 0,
      "points": 877,
      "rank": 16,
      "speed": 25.91111111111111,
      "taskStartTime": "12:45:02",
      "time": 15451,
    },
    Object {
      "competitionId": "GK",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 400.3,
      "glider": "Ventus c",
      "name": "Kölle, Günter",
      "penaltyPoints": 0,
      "points": 848,
      "rank": 17,
      "speed": 25.416666666666664,
      "taskStartTime": "12:50:08",
      "time": 15750,
    },
    Object {
      "competitionId": "1G",
      "country": "RP | AeC Landau",
      "distance": 400.3,
      "glider": "Ventus 2b",
      "name": "Bieler, Henrik",
      "penaltyPoints": 0,
      "points": 840,
      "rank": 18,
      "speed": 25.28888888888889,
      "taskStartTime": "12:39:59",
      "time": 15831,
    },
    Object {
      "competitionId": "IY",
      "country": "BW | LSG Breisgau",
      "distance": 400.3,
      "glider": "ASW 27b",
      "name": "Lindenberg, Kai",
      "penaltyPoints": 0,
      "points": 836,
      "rank": 19,
      "speed": 25.208333333333332,
      "taskStartTime": "12:46:56",
      "time": 15881,
    },
    Object {
      "competitionId": "DR",
      "country": "RP | FSV Neustadt/Wst",
      "distance": 400.3,
      "glider": "Ventus 2c",
      "name": "Schick, Marc",
      "penaltyPoints": 0,
      "points": 829,
      "rank": 20,
      "speed": 25.086111111111112,
      "taskStartTime": "12:39:53",
      "time": 15958,
    },
    Object {
      "competitionId": "JH",
      "country": "HE | Rhönflug Gersfeld",
      "distance": 400.3,
      "glider": "ASW 27",
      "name": "Jörges, Chris",
      "penaltyPoints": 0,
      "points": 794,
      "rank": 21,
      "speed": 24.502777777777776,
      "taskStartTime": "12:53:35",
      "time": 16339,
    },
    Object {
      "competitionId": "CZ",
      "country": "BY | SFZ Ottengrüner Heide",
      "distance": 400.3,
      "glider": "ASG 29",
      "name": "Bauer, Hanns-Günther",
      "penaltyPoints": 0,
      "points": 791,
      "rank": 22,
      "speed": 24.461111111111112,
      "taskStartTime": "12:50:00",
      "time": 16367,
    },
    Object {
      "competitionId": "VV",
      "country": "BW | FG Wolf Hirth",
      "distance": 400.3,
      "glider": "Ventus 2ax",
      "name": "Holighaus, Tilo",
      "penaltyPoints": 0,
      "points": 770,
      "rank": 23,
      "speed": 24.09166666666667,
      "taskStartTime": "12:26:44",
      "time": 16618,
    },
    Object {
      "competitionId": "GO",
      "country": "NI | LSV Gifhorn",
      "distance": 400.3,
      "glider": "ASW 27b",
      "name": "Gottschalk, Felix",
      "penaltyPoints": 0,
      "points": 752,
      "rank": 24,
      "speed": 23.786111111111108,
      "taskStartTime": "12:48:03",
      "time": 16830,
    },
    Object {
      "competitionId": "L7",
      "country": "BW | LSR Aalen",
      "distance": 400.3,
      "glider": "ASW 27",
      "name": "Schwarzer, Steffen",
      "penaltyPoints": 0,
      "points": 747,
      "rank": 25,
      "speed": 23.716666666666665,
      "taskStartTime": "12:59:28",
      "time": 16880,
    },
    Object {
      "competitionId": "DS",
      "country": "BY | SFG Donauwörth",
      "distance": 400.3,
      "glider": "Ventus 2a",
      "name": "Bauder, David",
      "penaltyPoints": 0,
      "points": 747,
      "rank": 25,
      "speed": 23.711111111111112,
      "taskStartTime": "12:59:26",
      "time": 16884,
    },
    Object {
      "competitionId": "KR",
      "country": "HE | SFC Riedelbach/Taunus",
      "distance": 400.3,
      "glider": "Ventus 2b",
      "name": "Malzacher, Sandra",
      "penaltyPoints": 0,
      "points": 726,
      "rank": 27,
      "speed": 23.355555555555554,
      "taskStartTime": "12:30:30",
      "time": 17140,
    },
    Object {
      "competitionId": "KB",
      "country": "HE | Mittelh.Verein Sontra",
      "distance": 400.3,
      "glider": "Ventus cT",
      "name": "Bethge, Sebastian",
      "penaltyPoints": 0,
      "points": 677,
      "rank": 28,
      "speed": 22.530555555555555,
      "taskStartTime": "12:30:19",
      "time": 17768,
    },
    Object {
      "competitionId": "GT",
      "country": "NI | LSV Gifhorn",
      "distance": 400.3,
      "glider": "ASW 27",
      "name": "Hagemann, Marianne",
      "penaltyPoints": 0,
      "points": 547,
      "rank": 29,
      "speed": 20.333333333333332,
      "taskStartTime": "12:44:42",
      "time": 19688,
    },
    Object {
      "competitionId": "NH",
      "country": "BB | FK Brandenburg",
      "distance": 355.2,
      "glider": "LS 6",
      "name": "Horbrügger, Herbert",
      "penaltyPoints": 0,
      "points": 397,
      "rank": 30,
      "speed": null,
      "taskStartTime": "12:48:07",
      "time": null,
    },
    Object {
      "competitionId": "2X",
      "country": "NI | LSG Waterkant-Zetel",
      "distance": 140.4,
      "glider": "Ventus 2cxa",
      "name": "Wollschläger, Swen",
      "penaltyPoints": 0,
      "points": 157,
      "rank": 31,
      "speed": null,
      "taskStartTime": "12:59:34",
      "time": null,
    },
    Object {
      "competitionId": "47",
      "country": "NW | AC Hagen",
      "distance": 114.3,
      "glider": "Ventus 2a",
      "name": "Edelhoff, Hans-Otto",
      "penaltyPoints": 0,
      "points": 128,
      "rank": 32,
      "speed": null,
      "taskStartTime": "12:30:59",
      "time": null,
    },
    Object {
      "competitionId": "G1",
      "country": "BY | FC Eichstätt",
      "distance": 107.6,
      "glider": "ASW 27",
      "name": "Böttigheimer, Christoph",
      "penaltyPoints": 0,
      "points": 120,
      "rank": 33,
      "speed": null,
      "taskStartTime": "12:45:15",
      "time": null,
    },
    Object {
      "competitionId": "K",
      "country": "NW | LfV Greven",
      "distance": 98.1,
      "glider": "ASG 29 E",
      "name": "Klossok, Annette",
      "penaltyPoints": 0,
      "points": 110,
      "rank": 34,
      "speed": null,
      "taskStartTime": "12:48:28",
      "time": null,
    },
    Object {
      "competitionId": "P10",
      "country": "NI | AC Wolfsburg",
      "distance": 86.2,
      "glider": "ASW 27b",
      "name": "Schramek, Eike Björn",
      "penaltyPoints": 0,
      "points": 96,
      "rank": 35,
      "speed": null,
      "taskStartTime": "12:25:21",
      "time": null,
    },
  ],
  "taskDescription": "Tagesaufgabe A - Racing-Task (RT)  400.3 km:  225Start Nord-> 115Hoepen-> 268Witts Berlinchen-> 231Stendal Borstel",
}
`;

exports[`scoreDay dm-15m-day2 1`] = `
Object {
  "class": "15m",
  "competition": Object {
    "description": "Stendal-Borstel (EDOV) 7/4/2017-7/14/2017",
    "name": "Deutsche Segelflug-Meisterschaft 15m/18m/OK",
  },
  "date": "2017-07-05",
  "remark": "Pmax=484,9 Pdm=254,0 Pvm=230,9 Do=147,0 f=1,000 N=35 n1=32 n2=25
dnf=did not flyLoggerabgabe zu spätZielkreishöhe unterschritten",
  "results": Array [
    Object {
      "competitionId": "VV",
      "country": "BW | FG Wolf Hirth",
      "distance": 147,
      "glider": "Ventus 2ax",
      "name": "Holighaus, Tilo",
      "penaltyPoints": 0,
      "points": 469,
      "rank": 1,
      "speed": 22.541666666666668,
      "taskStartTime": "16:04:32",
      "time": 6520,
    },
    Object {
      "competitionId": "FH",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 147,
      "glider": "Ventus 2a",
      "name": "Hein, Freddy",
      "penaltyPoints": 0,
      "points": 459,
      "rank": 2,
      "speed": 22.186111111111114,
      "taskStartTime": "16:02:22",
      "time": 6625,
    },
    Object {
      "competitionId": "BS",
      "country": "BY | LSV Regensburg",
      "distance": 147,
      "glider": "ASG 29 E",
      "name": "Mühl, Stefanie",
      "penaltyPoints": 0,
      "points": 452,
      "rank": 3,
      "speed": 21.955555555555556,
      "taskStartTime": "16:01:13",
      "time": 6694,
    },
    Object {
      "competitionId": "BK",
      "country": "BW | FSV Sindelfingen",
      "distance": 147,
      "glider": "ASG 29 E",
      "name": "Senne, Katrin U.",
      "penaltyPoints": 0,
      "points": 452,
      "rank": 3,
      "speed": 21.95277777777778,
      "taskStartTime": "16:01:06",
      "time": 6695,
    },
    Object {
      "competitionId": "EL",
      "country": "BW | FSV Sindelfingen",
      "distance": 147,
      "glider": "Discus 2b",
      "name": "Nölke, Sören",
      "penaltyPoints": 0,
      "points": 447,
      "rank": 5,
      "speed": 21.783333333333335,
      "taskStartTime": "16:00:42",
      "time": 6747,
    },
    Object {
      "competitionId": "3G",
      "country": "NW | LfV Greven",
      "distance": 147,
      "glider": "Ventus 2b",
      "name": "Pfennig, Michael",
      "penaltyPoints": 0,
      "points": 439,
      "rank": 6,
      "speed": 21.53611111111111,
      "taskStartTime": "15:59:01",
      "time": 6825,
    },
    Object {
      "competitionId": "DM",
      "country": "HH | Hamburger VfL",
      "distance": 147,
      "glider": "Ventus 2a",
      "name": "Büttner, Martin",
      "penaltyPoints": 0,
      "points": 436,
      "rank": 7,
      "speed": 21.441666666666666,
      "taskStartTime": "15:58:52",
      "time": 6855,
    },
    Object {
      "competitionId": "AS",
      "country": "BW | AC Esslingen",
      "distance": 147,
      "glider": "Ventus 2a",
      "name": "Späth, Alexander",
      "penaltyPoints": 0,
      "points": 423,
      "rank": 8,
      "speed": 20.994444444444444,
      "taskStartTime": "16:02:33",
      "time": 7001,
    },
    Object {
      "competitionId": "LT",
      "country": "RP | DJK SFG Landau",
      "distance": 147,
      "glider": "ASG 29",
      "name": "Theisinger, Laurenz",
      "penaltyPoints": 0,
      "points": 360,
      "rank": 9,
      "speed": 18.894444444444442,
      "taskStartTime": "16:14:41",
      "time": 7779,
    },
    Object {
      "competitionId": "PS",
      "country": "HE | Rhönflug Poppenhausen",
      "distance": 147,
      "glider": "ASW 27",
      "name": "Mihm, Julian",
      "penaltyPoints": 0,
      "points": 355,
      "rank": 10,
      "speed": 18.744444444444444,
      "taskStartTime": "16:13:57",
      "time": 7841,
    },
    Object {
      "competitionId": "PE",
      "country": "BW | FG Blaubeuren",
      "distance": 147,
      "glider": "Ventus 2a",
      "name": "Bauder, Sebastian",
      "penaltyPoints": 0,
      "points": 355,
      "rank": 10,
      "speed": 18.744444444444444,
      "taskStartTime": "16:13:58",
      "time": 7841,
    },
    Object {
      "competitionId": "V",
      "country": "HE | LSC Bad Homburg",
      "distance": 147,
      "glider": "Discus 2a",
      "name": "Omsels, Jan",
      "penaltyPoints": 0,
      "points": 355,
      "rank": 10,
      "speed": 18.719444444444445,
      "taskStartTime": "16:13:39",
      "time": 7851,
    },
    Object {
      "competitionId": "FT",
      "country": "RP | DJK SFG Landau",
      "distance": 147,
      "glider": "ASW 27",
      "name": "Frey, Yannick",
      "penaltyPoints": 0,
      "points": 354,
      "rank": 13,
      "speed": 18.705555555555556,
      "taskStartTime": "16:14:16",
      "time": 7858,
    },
    Object {
      "competitionId": "GT",
      "country": "NI | LSV Gifhorn",
      "distance": 147,
      "glider": "ASW 27",
      "name": "Hagemann, Marianne",
      "penaltyPoints": 0,
      "points": 346,
      "rank": 14,
      "speed": 18.436111111111114,
      "taskStartTime": "16:04:12",
      "time": 7972,
    },
    Object {
      "competitionId": "4Z",
      "country": "BY | LSV Landshut",
      "distance": 147,
      "glider": "Ventus 2a",
      "name": "Lichtmannecker, Stefan",
      "penaltyPoints": 0,
      "points": 341,
      "rank": 15,
      "speed": 18.28333333333333,
      "taskStartTime": "16:02:30",
      "time": 8039,
    },
    Object {
      "competitionId": "1G",
      "country": "RP | AeC Landau",
      "distance": 147,
      "glider": "Ventus 2b",
      "name": "Bieler, Henrik",
      "penaltyPoints": 0,
      "points": 336,
      "rank": 16,
      "speed": 18.091666666666665,
      "taskStartTime": "16:14:23",
      "time": 8125,
    },
    Object {
      "competitionId": "2X",
      "country": "NI | LSG Waterkant-Zetel",
      "distance": 147,
      "glider": "Ventus 2cxa",
      "name": "Wollschläger, Swen",
      "penaltyPoints": 157,
      "points": 328,
      "rank": 17,
      "speed": 23.058333333333334,
      "taskStartTime": "15:58:24",
      "time": 6374,
    },
    Object {
      "competitionId": "L7",
      "country": "BW | LSR Aalen",
      "distance": 147,
      "glider": "ASW 27",
      "name": "Schwarzer, Steffen",
      "penaltyPoints": 0,
      "points": 319,
      "rank": 18,
      "speed": 17.522222222222222,
      "taskStartTime": "16:04:56",
      "time": 8389,
    },
    Object {
      "competitionId": "DS",
      "country": "BY | SFG Donauwörth",
      "distance": 147,
      "glider": "Ventus 2a",
      "name": "Bauder, David",
      "penaltyPoints": 0,
      "points": 318,
      "rank": 19,
      "speed": 17.502777777777776,
      "taskStartTime": "16:04:51",
      "time": 8398,
    },
    Object {
      "competitionId": "P10",
      "country": "NI | AC Wolfsburg",
      "distance": 147,
      "glider": "ASW 27b",
      "name": "Schramek, Eike Björn",
      "penaltyPoints": 0,
      "points": 312,
      "rank": 20,
      "speed": 17.302777777777777,
      "taskStartTime": "16:03:59",
      "time": 8494,
    },
    Object {
      "competitionId": "DR",
      "country": "RP | FSV Neustadt/Wst",
      "distance": 147,
      "glider": "Ventus 2c",
      "name": "Schick, Marc",
      "penaltyPoints": 0,
      "points": 310,
      "rank": 21,
      "speed": 17.241666666666667,
      "taskStartTime": "16:14:22",
      "time": 8525,
    },
    Object {
      "competitionId": "CZ",
      "country": "BY | SFZ Ottengrüner Heide",
      "distance": 147,
      "glider": "ASG 29",
      "name": "Bauer, Hanns-Günther",
      "penaltyPoints": 0,
      "points": 308,
      "rank": 22,
      "speed": 17.17222222222222,
      "taskStartTime": "16:02:10",
      "time": 8559,
    },
    Object {
      "competitionId": "19",
      "country": "BW | FG Neckartal Köngen",
      "distance": 147,
      "glider": "Ventus 2a",
      "name": "Wettemann, Thomas",
      "penaltyPoints": 0,
      "points": 308,
      "rank": 22,
      "speed": 17.158333333333335,
      "taskStartTime": "16:01:55",
      "time": 8567,
    },
    Object {
      "competitionId": "EX",
      "country": "BW | FG Neckartal Köngen",
      "distance": 147,
      "glider": "Ventus 2ax",
      "name": "Eisele, Michael",
      "penaltyPoints": 0,
      "points": 308,
      "rank": 22,
      "speed": 17.155555555555555,
      "taskStartTime": "16:01:59",
      "time": 8568,
    },
    Object {
      "competitionId": "47",
      "country": "NW | AC Hagen",
      "distance": 147,
      "glider": "Ventus 2a",
      "name": "Edelhoff, Hans-Otto",
      "penaltyPoints": 0,
      "points": 269,
      "rank": 25,
      "speed": 15.869444444444445,
      "taskStartTime": "15:59:19",
      "time": 9261,
    },
    Object {
      "competitionId": "KR",
      "country": "HE | SFC Riedelbach/Taunus",
      "distance": 147,
      "glider": "Ventus 2b",
      "name": "Malzacher, Sandra",
      "penaltyPoints": 0,
      "points": 254,
      "rank": 26,
      "speed": 14.544444444444444,
      "taskStartTime": "16:06:01",
      "time": 10105,
    },
    Object {
      "competitionId": "JH",
      "country": "HE | Rhönflug Gersfeld",
      "distance": 133.1,
      "glider": "ASW 27",
      "name": "Jörges, Chris",
      "penaltyPoints": 0,
      "points": 230,
      "rank": 27,
      "speed": null,
      "taskStartTime": "16:01:18",
      "time": null,
    },
    Object {
      "competitionId": "NH",
      "country": "BB | FK Brandenburg",
      "distance": 113.8,
      "glider": "LS 6",
      "name": "Horbrügger, Herbert",
      "penaltyPoints": 0,
      "points": 197,
      "rank": 28,
      "speed": null,
      "taskStartTime": "16:01:49",
      "time": null,
    },
    Object {
      "competitionId": "GO",
      "country": "NI | LSV Gifhorn",
      "distance": 111.1,
      "glider": "ASW 27b",
      "name": "Gottschalk, Felix",
      "penaltyPoints": 0,
      "points": 192,
      "rank": 29,
      "speed": null,
      "taskStartTime": "16:01:42",
      "time": null,
    },
    Object {
      "competitionId": "G1",
      "country": "BY | FC Eichstätt",
      "distance": 112.2,
      "glider": "ASW 27",
      "name": "Böttigheimer, Christoph",
      "penaltyPoints": 5,
      "points": 189,
      "rank": 30,
      "speed": null,
      "taskStartTime": "16:04:40",
      "time": null,
    },
    Object {
      "competitionId": "KB",
      "country": "HE | Mittelh.Verein Sontra",
      "distance": 105.1,
      "glider": "Ventus cT",
      "name": "Bethge, Sebastian",
      "penaltyPoints": 0,
      "points": 182,
      "rank": 31,
      "speed": null,
      "taskStartTime": "16:05:05",
      "time": null,
    },
    Object {
      "competitionId": "LEO",
      "country": "RP | DJK SFG Landau",
      "distance": 104.8,
      "glider": "ASG 29",
      "name": "Theisinger, Georg",
      "penaltyPoints": 0,
      "points": 181,
      "rank": 32,
      "speed": null,
      "taskStartTime": "16:14:13",
      "time": null,
    },
    Object {
      "competitionId": "IY",
      "country": "BW | LSG Breisgau",
      "distance": 73.1,
      "glider": "ASW 27b",
      "name": "Lindenberg, Kai",
      "penaltyPoints": 0,
      "points": 126,
      "rank": 33,
      "speed": null,
      "taskStartTime": "16:14:59",
      "time": null,
    },
    Object {
      "competitionId": "K",
      "country": "NW | LfV Greven",
      "distance": 70.7,
      "glider": "ASG 29 E",
      "name": "Klossok, Annette",
      "penaltyPoints": 0,
      "points": 122,
      "rank": 34,
      "speed": null,
      "taskStartTime": "16:01:34",
      "time": null,
    },
    Object {
      "competitionId": "GK",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 66.6,
      "glider": "Ventus c",
      "name": "Kölle, Günter",
      "penaltyPoints": 0,
      "points": 115,
      "rank": 35,
      "speed": null,
      "taskStartTime": "16:14:28",
      "time": null,
    },
  ],
  "taskDescription": "Tagesaufgabe A - Racing-Task (RT)  147.0 km:  228Start West-> 093Gorleben Foerder-> 051Daehre Bf Stillg-> 231Stendal Borstel",
}
`;

exports[`scoreDay dm-15m-day3 1`] = `
Object {
  "class": "15m",
  "competition": Object {
    "description": "Stendal-Borstel (EDOV) 7/4/2017-7/14/2017",
    "name": "Deutsche Segelflug-Meisterschaft 15m/18m/OK",
  },
  "date": "2017-07-06",
  "remark": "Pmax=1000,0 Pdm=371,4 Pvm=628,6 Do=411,3 f=1,000 N=35 n1=34 n2=33
(*)=scoring time equal Tmin
dnf=did not flyLuftraumVerwarnung Zeit Loggerabgabe",
  "results": Array [
    Object {
      "competitionId": "1G",
      "country": "RP | AeC Landau",
      "distance": 411.3,
      "glider": "Ventus 2b",
      "name": "Bieler, Henrik",
      "penaltyPoints": 0,
      "points": 1000,
      "rank": 1,
      "speed": 30.236111111111107,
      "taskStartTime": "13:17:56",
      "time": 13604,
    },
    Object {
      "competitionId": "DS",
      "country": "BY | SFG Donauwörth",
      "distance": 391.1,
      "glider": "Ventus 2a",
      "name": "Bauder, David",
      "penaltyPoints": 0,
      "points": 936,
      "rank": 2,
      "speed": 29.21388888888889,
      "taskStartTime": "13:17:14",
      "time": 13388,
    },
    Object {
      "competitionId": "L7",
      "country": "BW | LSR Aalen",
      "distance": 390.8,
      "glider": "ASW 27",
      "name": "Schwarzer, Steffen",
      "penaltyPoints": 0,
      "points": 935,
      "rank": 3,
      "speed": 29.191666666666666,
      "taskStartTime": "13:17:23",
      "time": 13387,
    },
    Object {
      "competitionId": "EL",
      "country": "BW | FSV Sindelfingen",
      "distance": 387.8,
      "glider": "Discus 2b",
      "name": "Nölke, Sören",
      "penaltyPoints": 0,
      "points": 927,
      "rank": 4,
      "speed": 29.058333333333334,
      "taskStartTime": "13:22:11",
      "time": 13345,
    },
    Object {
      "competitionId": "DR",
      "country": "RP | FSV Neustadt/Wst",
      "distance": 386.9,
      "glider": "Ventus 2c",
      "name": "Schick, Marc",
      "penaltyPoints": 0,
      "points": 906,
      "rank": 5,
      "speed": 28.727777777777778,
      "taskStartTime": "13:18:07",
      "time": 13468,
    },
    Object {
      "competitionId": "GT",
      "country": "NI | LSV Gifhorn",
      "distance": 399.2,
      "glider": "ASW 27",
      "name": "Hagemann, Marianne",
      "penaltyPoints": 0,
      "points": 894,
      "rank": 6,
      "speed": 28.53333333333333,
      "taskStartTime": "13:20:05",
      "time": 13990,
    },
    Object {
      "competitionId": "19",
      "country": "BW | FG Neckartal Köngen",
      "distance": 368.6,
      "glider": "Ventus 2a",
      "name": "Wettemann, Thomas",
      "penaltyPoints": 0,
      "points": 888,
      "rank": 7,
      "speed": 28.441666666666666,
      "taskStartTime": "13:44:33",
      "time": 12960,
    },
    Object {
      "competitionId": "4Z",
      "country": "BY | LSV Landshut",
      "distance": 368.7,
      "glider": "Ventus 2a",
      "name": "Lichtmannecker, Stefan",
      "penaltyPoints": 0,
      "points": 880,
      "rank": 8,
      "speed": 28.31111111111111,
      "taskStartTime": "13:44:27",
      "time": 13023,
    },
    Object {
      "competitionId": "EX",
      "country": "BW | FG Neckartal Köngen",
      "distance": 368.7,
      "glider": "Ventus 2ax",
      "name": "Eisele, Michael",
      "penaltyPoints": 0,
      "points": 875,
      "rank": 9,
      "speed": 28.233333333333334,
      "taskStartTime": "13:44:36",
      "time": 13059,
    },
    Object {
      "competitionId": "P10",
      "country": "NI | AC Wolfsburg",
      "distance": 395.6,
      "glider": "ASW 27b",
      "name": "Schramek, Eike Björn",
      "penaltyPoints": 0,
      "points": 871,
      "rank": 10,
      "speed": 28.163888888888888,
      "taskStartTime": "13:19:12",
      "time": 14046,
    },
    Object {
      "competitionId": "PE",
      "country": "BW | FG Blaubeuren",
      "distance": 383.7,
      "glider": "Ventus 2a",
      "name": "Bauder, Sebastian",
      "penaltyPoints": 0,
      "points": 866,
      "rank": 11,
      "speed": 28.080555555555556,
      "taskStartTime": "13:33:20",
      "time": 13664,
    },
    Object {
      "competitionId": "V",
      "country": "HE | LSC Bad Homburg",
      "distance": 383,
      "glider": "Discus 2a",
      "name": "Omsels, Jan",
      "penaltyPoints": 0,
      "points": 861,
      "rank": 12,
      "speed": 28.008333333333333,
      "taskStartTime": "13:33:21",
      "time": 13674,
    },
    Object {
      "competitionId": "LEO",
      "country": "RP | DJK SFG Landau",
      "distance": 359.7,
      "glider": "ASG 29",
      "name": "Theisinger, Georg",
      "penaltyPoints": 0,
      "points": 841,
      "rank": 13,
      "speed": 27.677777777777777,
      "taskStartTime": "13:43:52",
      "time": 12996,
    },
    Object {
      "competitionId": "DM",
      "country": "HH | Hamburger VfL",
      "distance": 362.1,
      "glider": "Ventus 2a",
      "name": "Büttner, Martin",
      "penaltyPoints": 0,
      "points": 835,
      "rank": 14,
      "speed": 27.591666666666665,
      "taskStartTime": "13:39:26",
      "time": 13125,
    },
    Object {
      "competitionId": "3G",
      "country": "NW | LfV Greven",
      "distance": 361.5,
      "glider": "Ventus 2b",
      "name": "Pfennig, Michael",
      "penaltyPoints": 0,
      "points": 835,
      "rank": 14,
      "speed": 27.588888888888885,
      "taskStartTime": "13:39:11",
      "time": 13103,
    },
    Object {
      "competitionId": "FT",
      "country": "RP | DJK SFG Landau",
      "distance": 359.3,
      "glider": "ASW 27",
      "name": "Frey, Yannick",
      "penaltyPoints": 0,
      "points": 831,
      "rank": 16,
      "speed": 27.525,
      "taskStartTime": "13:43:57",
      "time": 13055,
    },
    Object {
      "competitionId": "FH",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 363.2,
      "glider": "Ventus 2a",
      "name": "Hein, Freddy",
      "penaltyPoints": 0,
      "points": 799,
      "rank": 17,
      "speed": 27.01111111111111,
      "taskStartTime": "13:34:59",
      "time": 13447,
    },
    Object {
      "competitionId": "AS",
      "country": "BW | AC Esslingen",
      "distance": 363.1,
      "glider": "Ventus 2a",
      "name": "Späth, Alexander",
      "penaltyPoints": 0,
      "points": 795,
      "rank": 18,
      "speed": 26.955555555555556,
      "taskStartTime": "13:34:55",
      "time": 13472,
    },
    Object {
      "competitionId": "BK",
      "country": "BW | FSV Sindelfingen",
      "distance": 379.5,
      "glider": "ASG 29 E",
      "name": "Senne, Katrin U.",
      "penaltyPoints": 0,
      "points": 770,
      "rank": 19,
      "speed": 26.544444444444444,
      "taskStartTime": "13:44:02",
      "time": 14297,
    },
    Object {
      "competitionId": "GO",
      "country": "NI | LSV Gifhorn",
      "distance": 385.2,
      "glider": "ASW 27b",
      "name": "Gottschalk, Felix",
      "penaltyPoints": 0,
      "points": 768,
      "rank": 20,
      "speed": 26.51388888888889,
      "taskStartTime": "13:43:45",
      "time": 14528,
    },
    Object {
      "competitionId": "IY",
      "country": "BW | LSG Breisgau",
      "distance": 353.2,
      "glider": "ASW 27b",
      "name": "Lindenberg, Kai",
      "penaltyPoints": 0,
      "points": 766,
      "rank": 21,
      "speed": 26.491666666666667,
      "taskStartTime": "13:23:02",
      "time": 13333,
    },
    Object {
      "competitionId": "VV",
      "country": "BW | FG Wolf Hirth",
      "distance": 376.5,
      "glider": "Ventus 2ax",
      "name": "Holighaus, Tilo",
      "penaltyPoints": 0,
      "points": 736,
      "rank": 22,
      "speed": 25.999999999999996,
      "taskStartTime": "13:37:46",
      "time": 14483,
    },
    Object {
      "competitionId": "2X",
      "country": "NI | LSG Waterkant-Zetel",
      "distance": 387.6,
      "glider": "Ventus 2cxa",
      "name": "Wollschläger, Swen",
      "penaltyPoints": 0,
      "points": 735,
      "rank": 23,
      "speed": 25.991666666666664,
      "taskStartTime": "13:15:27",
      "time": 14912,
    },
    Object {
      "competitionId": "47",
      "country": "NW | AC Hagen",
      "distance": 357.3,
      "glider": "Ventus 2a",
      "name": "Edelhoff, Hans-Otto",
      "penaltyPoints": 0,
      "points": 718,
      "rank": 24,
      "speed": 25.716666666666665,
      "taskStartTime": "13:35:42",
      "time": 13893,
    },
    Object {
      "competitionId": "NH",
      "country": "BB | FK Brandenburg",
      "distance": 391.7,
      "glider": "LS 6",
      "name": "Horbrügger, Herbert",
      "penaltyPoints": 0,
      "points": 707,
      "rank": 25,
      "speed": 25.53611111111111,
      "taskStartTime": "13:43:49",
      "time": 15339,
    },
    Object {
      "competitionId": "LT",
      "country": "RP | DJK SFG Landau",
      "distance": 361.8,
      "glider": "ASG 29",
      "name": "Theisinger, Laurenz",
      "penaltyPoints": 0,
      "points": 705,
      "rank": 26,
      "speed": 25.508333333333333,
      "taskStartTime": "13:44:00",
      "time": 14184,
    },
    Object {
      "competitionId": "PS",
      "country": "HE | Rhönflug Poppenhausen",
      "distance": 369.4,
      "glider": "ASW 27",
      "name": "Mihm, Julian",
      "penaltyPoints": 0,
      "points": 699,
      "rank": 27,
      "speed": 25.40555555555555,
      "taskStartTime": "13:19:39",
      "time": 14540,
    },
    Object {
      "competitionId": "BS",
      "country": "BY | LSV Regensburg",
      "distance": 360.8,
      "glider": "ASG 29 E",
      "name": "Mühl, Stefanie",
      "penaltyPoints": 0,
      "points": 677,
      "rank": 28,
      "speed": 25.06388888888889,
      "taskStartTime": "13:44:04",
      "time": 14396,
    },
    Object {
      "competitionId": "CZ",
      "country": "BY | SFZ Ottengrüner Heide",
      "distance": 347.3,
      "glider": "ASG 29",
      "name": "Bauer, Hanns-Günther",
      "penaltyPoints": 0,
      "points": 633,
      "rank": 29,
      "speed": 24.344444444444445,
      "taskStartTime": "13:44:31",
      "time": 14266,
    },
    Object {
      "competitionId": "K",
      "country": "NW | LfV Greven",
      "distance": 325.8,
      "glider": "ASG 29 E",
      "name": "Klossok, Annette",
      "penaltyPoints": 0,
      "points": 523,
      "rank": 30,
      "speed": 22.594444444444445,
      "taskStartTime": "13:43:54",
      "time": 14420,
    },
    Object {
      "competitionId": "KR",
      "country": "HE | SFC Riedelbach/Taunus",
      "distance": 320,
      "glider": "Ventus 2b",
      "name": "Malzacher, Sandra",
      "penaltyPoints": 0,
      "points": 497,
      "rank": 31,
      "speed": 22.16388888888889,
      "taskStartTime": "13:17:43",
      "time": 14438,
    },
    Object {
      "competitionId": "KB",
      "country": "HE | Mittelh.Verein Sontra",
      "distance": 305,
      "glider": "Ventus cT",
      "name": "Bethge, Sebastian",
      "penaltyPoints": 0,
      "points": 470,
      "rank": 32,
      "speed": 21.73333333333333,
      "taskStartTime": "13:26:16",
      "time": 14033,
    },
    Object {
      "competitionId": "G1",
      "country": "BY | FC Eichstätt",
      "distance": 310,
      "glider": "ASW 27",
      "name": "Böttigheimer, Christoph",
      "penaltyPoints": 0,
      "points": 444,
      "rank": 33,
      "speed": 21.325,
      "taskStartTime": "13:26:23",
      "time": 14536,
    },
    Object {
      "competitionId": "JH",
      "country": "HE | Rhönflug Gersfeld",
      "distance": 104.1,
      "glider": "ASW 27",
      "name": "Jörges, Chris",
      "penaltyPoints": 0,
      "points": 94,
      "rank": 34,
      "speed": null,
      "taskStartTime": "13:20:02",
      "time": null,
    },
    Object {
      "competitionId": "GK",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 98.5,
      "glider": "Ventus c",
      "name": "Kölle, Günter",
      "penaltyPoints": 0,
      "points": 89,
      "rank": 35,
      "speed": null,
      "taskStartTime": "13:44:11",
      "time": null,
    },
  ],
  "taskDescription": "Tagesaufgabe A - Speed Assigned Area Task (AAT) (Tmin=03:30)  297.1 km < D < 503.2 km:  228Start West-> 111Helmstedt Rote-> 248Uckro Bf-> 231Stendal Borstel",
}
`;

exports[`scoreDay dm-15m-day4 1`] = `
Object {
  "class": "15m",
  "competition": Object {
    "description": "Stendal-Borstel (EDOV) 7/4/2017-7/14/2017",
    "name": "Deutsche Segelflug-Meisterschaft 15m/18m/OK",
  },
  "date": "2017-07-07",
  "remark": "Pmax=800,0 Pdm=266,7 Pvm=533,3 Do=256,6 f=1,000 N=35 n1=35 n2=35
(*)=scoring time equal Tmin
dnf=did not flyHöhe Zielkreis",
  "results": Array [
    Object {
      "competitionId": "PE",
      "country": "BW | FG Blaubeuren",
      "distance": 251.7,
      "glider": "Ventus 2a",
      "name": "Bauder, Sebastian",
      "penaltyPoints": 0,
      "points": 800,
      "rank": 1,
      "speed": 27.96944444444444,
      "taskStartTime": "13:39:00",
      "time": 8612,
    },
    Object {
      "competitionId": "V",
      "country": "HE | LSC Bad Homburg",
      "distance": 251.7,
      "glider": "Discus 2a",
      "name": "Omsels, Jan",
      "penaltyPoints": 0,
      "points": 800,
      "rank": 1,
      "speed": 27.96666666666667,
      "taskStartTime": "13:39:04",
      "time": 8537,
    },
    Object {
      "competitionId": "3G",
      "country": "NW | LfV Greven",
      "distance": 251.5,
      "glider": "Ventus 2b",
      "name": "Pfennig, Michael",
      "penaltyPoints": 0,
      "points": 799,
      "rank": 3,
      "speed": 27.947222222222223,
      "taskStartTime": "13:39:47",
      "time": 8602,
    },
    Object {
      "competitionId": "CZ",
      "country": "BY | SFZ Ottengrüner Heide",
      "distance": 251,
      "glider": "ASG 29",
      "name": "Bauer, Hanns-Günther",
      "penaltyPoints": 0,
      "points": 792,
      "rank": 4,
      "speed": 27.83611111111111,
      "taskStartTime": "13:37:46",
      "time": 9017,
    },
    Object {
      "competitionId": "LEO",
      "country": "RP | DJK SFG Landau",
      "distance": 250.1,
      "glider": "ASG 29",
      "name": "Theisinger, Georg",
      "penaltyPoints": 0,
      "points": 790,
      "rank": 5,
      "speed": 27.78888888888889,
      "taskStartTime": "13:36:21",
      "time": 8692,
    },
    Object {
      "competitionId": "LT",
      "country": "RP | DJK SFG Landau",
      "distance": 249.8,
      "glider": "ASG 29",
      "name": "Theisinger, Laurenz",
      "penaltyPoints": 0,
      "points": 788,
      "rank": 6,
      "speed": 27.755555555555556,
      "taskStartTime": "13:36:33",
      "time": 8802,
    },
    Object {
      "competitionId": "VV",
      "country": "BW | FG Wolf Hirth",
      "distance": 249.6,
      "glider": "Ventus 2ax",
      "name": "Holighaus, Tilo",
      "penaltyPoints": 0,
      "points": 777,
      "rank": 7,
      "speed": 27.56111111111111,
      "taskStartTime": "13:20:27",
      "time": 9056,
    },
    Object {
      "competitionId": "DS",
      "country": "BY | SFG Donauwörth",
      "distance": 247.7,
      "glider": "Ventus 2a",
      "name": "Bauder, David",
      "penaltyPoints": 0,
      "points": 775,
      "rank": 8,
      "speed": 27.525,
      "taskStartTime": "13:37:35",
      "time": 8915,
    },
    Object {
      "competitionId": "L7",
      "country": "BW | LSR Aalen",
      "distance": 247.7,
      "glider": "ASW 27",
      "name": "Schwarzer, Steffen",
      "penaltyPoints": 0,
      "points": 774,
      "rank": 9,
      "speed": 27.522222222222222,
      "taskStartTime": "13:37:38",
      "time": 8810,
    },
    Object {
      "competitionId": "1G",
      "country": "RP | AeC Landau",
      "distance": 256,
      "glider": "Ventus 2b",
      "name": "Bieler, Henrik",
      "penaltyPoints": 0,
      "points": 768,
      "rank": 10,
      "speed": 27.405555555555555,
      "taskStartTime": "13:23:05",
      "time": 9341,
    },
    Object {
      "competitionId": "FT",
      "country": "RP | DJK SFG Landau",
      "distance": 246.1,
      "glider": "ASW 27",
      "name": "Frey, Yannick",
      "penaltyPoints": 3,
      "points": 761,
      "rank": 11,
      "speed": 27.34444444444444,
      "taskStartTime": "13:36:47",
      "time": 8869,
    },
    Object {
      "competitionId": "JH",
      "country": "HE | Rhönflug Gersfeld",
      "distance": 243.6,
      "glider": "ASW 27",
      "name": "Jörges, Chris",
      "penaltyPoints": 0,
      "points": 748,
      "rank": 12,
      "speed": 27.066666666666666,
      "taskStartTime": "13:43:07",
      "time": 8578,
    },
    Object {
      "competitionId": "PS",
      "country": "HE | Rhönflug Poppenhausen",
      "distance": 243.4,
      "glider": "ASW 27",
      "name": "Mihm, Julian",
      "penaltyPoints": 0,
      "points": 747,
      "rank": 13,
      "speed": 27.044444444444444,
      "taskStartTime": "13:43:12",
      "time": 8720,
    },
    Object {
      "competitionId": "AS",
      "country": "BW | AC Esslingen",
      "distance": 242.7,
      "glider": "Ventus 2a",
      "name": "Späth, Alexander",
      "penaltyPoints": 0,
      "points": 743,
      "rank": 14,
      "speed": 26.97222222222222,
      "taskStartTime": "13:37:09",
      "time": 8183,
    },
    Object {
      "competitionId": "FH",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 242.2,
      "glider": "Ventus 2a",
      "name": "Hein, Freddy",
      "penaltyPoints": 0,
      "points": 739,
      "rank": 15,
      "speed": 26.911111111111108,
      "taskStartTime": "13:37:04",
      "time": 8216,
    },
    Object {
      "competitionId": "DR",
      "country": "RP | FSV Neustadt/Wst",
      "distance": 256.6,
      "glider": "Ventus 2c",
      "name": "Schick, Marc",
      "penaltyPoints": 0,
      "points": 722,
      "rank": 16,
      "speed": 26.605555555555554,
      "taskStartTime": "13:23:10",
      "time": 9645,
    },
    Object {
      "competitionId": "2X",
      "country": "NI | LSG Waterkant-Zetel",
      "distance": 238.1,
      "glider": "Ventus 2cxa",
      "name": "Wollschläger, Swen",
      "penaltyPoints": 0,
      "points": 714,
      "rank": 17,
      "speed": 26.458333333333332,
      "taskStartTime": "13:26:21",
      "time": 9000,
    },
    Object {
      "competitionId": "IY",
      "country": "BW | LSG Breisgau",
      "distance": 232.7,
      "glider": "ASW 27b",
      "name": "Lindenberg, Kai",
      "penaltyPoints": 0,
      "points": 679,
      "rank": 18,
      "speed": 25.855555555555554,
      "taskStartTime": "13:57:14",
      "time": 8621,
    },
    Object {
      "competitionId": "4Z",
      "country": "BY | LSV Landshut",
      "distance": 251.1,
      "glider": "Ventus 2a",
      "name": "Lichtmannecker, Stefan",
      "penaltyPoints": 0,
      "points": 670,
      "rank": 19,
      "speed": 25.697222222222223,
      "taskStartTime": "13:37:41",
      "time": 9772,
    },
    Object {
      "competitionId": "EX",
      "country": "BW | FG Neckartal Köngen",
      "distance": 231.1,
      "glider": "Ventus 2ax",
      "name": "Eisele, Michael",
      "penaltyPoints": 0,
      "points": 669,
      "rank": 20,
      "speed": 25.680555555555557,
      "taskStartTime": "13:47:34",
      "time": 8800,
    },
    Object {
      "competitionId": "19",
      "country": "BW | FG Neckartal Köngen",
      "distance": 231,
      "glider": "Ventus 2a",
      "name": "Wettemann, Thomas",
      "penaltyPoints": 0,
      "points": 668,
      "rank": 21,
      "speed": 25.666666666666668,
      "taskStartTime": "13:47:31",
      "time": 8856,
    },
    Object {
      "competitionId": "GO",
      "country": "NI | LSV Gifhorn",
      "distance": 243.7,
      "glider": "ASW 27b",
      "name": "Gottschalk, Felix",
      "penaltyPoints": 0,
      "points": 667,
      "rank": 22,
      "speed": 25.65,
      "taskStartTime": "13:40:10",
      "time": 9501,
    },
    Object {
      "competitionId": "KB",
      "country": "HE | Mittelh.Verein Sontra",
      "distance": 225.6,
      "glider": "Ventus cT",
      "name": "Bethge, Sebastian",
      "penaltyPoints": 0,
      "points": 634,
      "rank": 23,
      "speed": 25.066666666666663,
      "taskStartTime": "13:39:30",
      "time": 8802,
    },
    Object {
      "competitionId": "P10",
      "country": "NI | AC Wolfsburg",
      "distance": 223.1,
      "glider": "ASW 27b",
      "name": "Schramek, Eike Björn",
      "penaltyPoints": 0,
      "points": 618,
      "rank": 24,
      "speed": 24.788888888888888,
      "taskStartTime": "13:42:31",
      "time": 8563,
    },
    Object {
      "competitionId": "NH",
      "country": "BB | FK Brandenburg",
      "distance": 243.3,
      "glider": "LS 6",
      "name": "Horbrügger, Herbert",
      "penaltyPoints": 0,
      "points": 613,
      "rank": 25,
      "speed": 24.705555555555556,
      "taskStartTime": "13:40:01",
      "time": 9848,
    },
    Object {
      "competitionId": "GK",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 233.9,
      "glider": "Ventus c",
      "name": "Kölle, Günter",
      "penaltyPoints": 0,
      "points": 602,
      "rank": 26,
      "speed": 24.508333333333333,
      "taskStartTime": "13:43:42",
      "time": 9544,
    },
    Object {
      "competitionId": "BK",
      "country": "BW | FSV Sindelfingen",
      "distance": 218.8,
      "glider": "ASG 29 E",
      "name": "Senne, Katrin U.",
      "penaltyPoints": 0,
      "points": 584,
      "rank": 27,
      "speed": 24.194444444444443,
      "taskStartTime": "13:30:41",
      "time": 9043,
    },
    Object {
      "competitionId": "DM",
      "country": "HH | Hamburger VfL",
      "distance": 236.3,
      "glider": "Ventus 2a",
      "name": "Büttner, Martin",
      "penaltyPoints": 0,
      "points": 582,
      "rank": 28,
      "speed": 24.15555555555555,
      "taskStartTime": "13:39:49",
      "time": 9785,
    },
    Object {
      "competitionId": "KR",
      "country": "HE | SFC Riedelbach/Taunus",
      "distance": 215.9,
      "glider": "Ventus 2b",
      "name": "Malzacher, Sandra",
      "penaltyPoints": 0,
      "points": 572,
      "rank": 29,
      "speed": 23.988888888888887,
      "taskStartTime": "13:31:00",
      "time": 8885,
    },
    Object {
      "competitionId": "47",
      "country": "NW | AC Hagen",
      "distance": 217.5,
      "glider": "Ventus 2a",
      "name": "Edelhoff, Hans-Otto",
      "penaltyPoints": 0,
      "points": 567,
      "rank": 30,
      "speed": 23.897222222222222,
      "taskStartTime": "13:31:48",
      "time": 9101,
    },
    Object {
      "competitionId": "BS",
      "country": "BY | LSV Regensburg",
      "distance": 219.5,
      "glider": "ASG 29 E",
      "name": "Mühl, Stefanie",
      "penaltyPoints": 0,
      "points": 555,
      "rank": 31,
      "speed": 23.680555555555554,
      "taskStartTime": "13:30:46",
      "time": 9270,
    },
    Object {
      "competitionId": "GT",
      "country": "NI | LSV Gifhorn",
      "distance": 233.3,
      "glider": "ASW 27",
      "name": "Hagemann, Marianne",
      "penaltyPoints": 0,
      "points": 523,
      "rank": 32,
      "speed": 23.12777777777778,
      "taskStartTime": "13:33:25",
      "time": 10087,
    },
    Object {
      "competitionId": "K",
      "country": "NW | LfV Greven",
      "distance": 217,
      "glider": "ASG 29 E",
      "name": "Klossok, Annette",
      "penaltyPoints": 0,
      "points": 511,
      "rank": 33,
      "speed": 22.92222222222222,
      "taskStartTime": "13:24:37",
      "time": 9467,
    },
    Object {
      "competitionId": "EL",
      "country": "BW | FSV Sindelfingen",
      "distance": 212.9,
      "glider": "Discus 2b",
      "name": "Nölke, Sören",
      "penaltyPoints": 0,
      "points": 477,
      "rank": 34,
      "speed": 22.319444444444443,
      "taskStartTime": "13:27:17",
      "time": 9540,
    },
    Object {
      "competitionId": "G1",
      "country": "BY | FC Eichstätt",
      "distance": 204.8,
      "glider": "ASW 27",
      "name": "Böttigheimer, Christoph",
      "penaltyPoints": 0,
      "points": 467,
      "rank": 35,
      "speed": 22.144444444444442,
      "taskStartTime": "13:25:05",
      "time": 9251,
    },
  ],
  "taskDescription": "Tagesaufgabe A - Speed Assigned Area Task (AAT) (Tmin=02:30)  151.6 km < D < 296.8 km:  228Start West-> 131Kloetze Bf-> 089Goehrde Bf-> 110Havelberg Dom-> 231Stendal Borstel",
}
`;

exports[`scoreDay dm-15m-day5 1`] = `
Object {
  "class": "15m",
  "competition": Object {
    "description": "Stendal-Borstel (EDOV) 7/4/2017-7/14/2017",
    "name": "Deutsche Segelflug-Meisterschaft 15m/18m/OK",
  },
  "date": "2017-07-08",
  "remark": "Pmax=327,3 Pdm=109,1 Pvm=218,2 Do=138,3 f=1,000 N=35 n1=35 n2=35
dnf=did not flyHöhe ZielkreisLoggerausfall im unkritischen Bereich",
  "results": Array [
    Object {
      "competitionId": "BK",
      "country": "BW | FSV Sindelfingen",
      "distance": 138.3,
      "glider": "ASG 29 E",
      "name": "Senne, Katrin U.",
      "penaltyPoints": 0,
      "points": 327,
      "rank": 1,
      "speed": 29.144444444444446,
      "taskStartTime": "15:58:36",
      "time": 4746,
    },
    Object {
      "competitionId": "19",
      "country": "BW | FG Neckartal Köngen",
      "distance": 138.3,
      "glider": "Ventus 2a",
      "name": "Wettemann, Thomas",
      "penaltyPoints": 0,
      "points": 327,
      "rank": 1,
      "speed": 29.122222222222224,
      "taskStartTime": "15:58:52",
      "time": 4750,
    },
    Object {
      "competitionId": "EX",
      "country": "BW | FG Neckartal Köngen",
      "distance": 138.3,
      "glider": "Ventus 2ax",
      "name": "Eisele, Michael",
      "penaltyPoints": 0,
      "points": 325,
      "rank": 3,
      "speed": 29.022222222222222,
      "taskStartTime": "15:58:48",
      "time": 4766,
    },
    Object {
      "competitionId": "3G",
      "country": "NW | LfV Greven",
      "distance": 138.3,
      "glider": "Ventus 2b",
      "name": "Pfennig, Michael",
      "penaltyPoints": 0,
      "points": 313,
      "rank": 4,
      "speed": 28.51111111111111,
      "taskStartTime": "15:58:20",
      "time": 4852,
    },
    Object {
      "competitionId": "AS",
      "country": "BW | AC Esslingen",
      "distance": 138.3,
      "glider": "Ventus 2a",
      "name": "Späth, Alexander",
      "penaltyPoints": 0,
      "points": 313,
      "rank": 4,
      "speed": 28.508333333333333,
      "taskStartTime": "15:57:06",
      "time": 4852,
    },
    Object {
      "competitionId": "FH",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 138.3,
      "glider": "Ventus 2a",
      "name": "Hein, Freddy",
      "penaltyPoints": 0,
      "points": 311,
      "rank": 6,
      "speed": 28.433333333333334,
      "taskStartTime": "15:57:04",
      "time": 4865,
    },
    Object {
      "competitionId": "DM",
      "country": "HH | Hamburger VfL",
      "distance": 138.3,
      "glider": "Ventus 2a",
      "name": "Büttner, Martin",
      "penaltyPoints": 0,
      "points": 309,
      "rank": 7,
      "speed": 28.33888888888889,
      "taskStartTime": "15:58:25",
      "time": 4881,
    },
    Object {
      "competitionId": "BS",
      "country": "BY | LSV Regensburg",
      "distance": 138.3,
      "glider": "ASG 29 E",
      "name": "Mühl, Stefanie",
      "penaltyPoints": 0,
      "points": 308,
      "rank": 8,
      "speed": 28.28611111111111,
      "taskStartTime": "15:58:38",
      "time": 4890,
    },
    Object {
      "competitionId": "L7",
      "country": "BW | LSR Aalen",
      "distance": 138.3,
      "glider": "ASW 27",
      "name": "Schwarzer, Steffen",
      "penaltyPoints": 0,
      "points": 308,
      "rank": 8,
      "speed": 28.269444444444442,
      "taskStartTime": "15:58:06",
      "time": 4893,
    },
    Object {
      "competitionId": "DS",
      "country": "BY | SFG Donauwörth",
      "distance": 138.3,
      "glider": "Ventus 2a",
      "name": "Bauder, David",
      "penaltyPoints": 0,
      "points": 307,
      "rank": 10,
      "speed": 28.241666666666667,
      "taskStartTime": "15:58:10",
      "time": 4898,
    },
    Object {
      "competitionId": "V",
      "country": "HE | LSC Bad Homburg",
      "distance": 138.3,
      "glider": "Discus 2a",
      "name": "Omsels, Jan",
      "penaltyPoints": 0,
      "points": 305,
      "rank": 11,
      "speed": 28.166666666666668,
      "taskStartTime": "15:54:55",
      "time": 4911,
    },
    Object {
      "competitionId": "IY",
      "country": "BW | LSG Breisgau",
      "distance": 138.3,
      "glider": "ASW 27b",
      "name": "Lindenberg, Kai",
      "penaltyPoints": 0,
      "points": 304,
      "rank": 12,
      "speed": 28.10833333333333,
      "taskStartTime": "15:56:22",
      "time": 4921,
    },
    Object {
      "competitionId": "VV",
      "country": "BW | FG Wolf Hirth",
      "distance": 138.3,
      "glider": "Ventus 2ax",
      "name": "Holighaus, Tilo",
      "penaltyPoints": 0,
      "points": 295,
      "rank": 13,
      "speed": 27.716666666666665,
      "taskStartTime": "15:48:11",
      "time": 4991,
    },
    Object {
      "competitionId": "PE",
      "country": "BW | FG Blaubeuren",
      "distance": 138.3,
      "glider": "Ventus 2a",
      "name": "Bauder, Sebastian",
      "penaltyPoints": 0,
      "points": 293,
      "rank": 14,
      "speed": 27.608333333333334,
      "taskStartTime": "15:54:55",
      "time": 5010,
    },
    Object {
      "competitionId": "2X",
      "country": "NI | LSG Waterkant-Zetel",
      "distance": 138.3,
      "glider": "Ventus 2cxa",
      "name": "Wollschläger, Swen",
      "penaltyPoints": 0,
      "points": 291,
      "rank": 15,
      "speed": 27.530555555555555,
      "taskStartTime": "15:53:48",
      "time": 5025,
    },
    Object {
      "competitionId": "PS",
      "country": "HE | Rhönflug Poppenhausen",
      "distance": 138.3,
      "glider": "ASW 27",
      "name": "Mihm, Julian",
      "penaltyPoints": 0,
      "points": 281,
      "rank": 16,
      "speed": 27.09722222222222,
      "taskStartTime": "15:57:47",
      "time": 5105,
    },
    Object {
      "competitionId": "4Z",
      "country": "BY | LSV Landshut",
      "distance": 138.3,
      "glider": "Ventus 2a",
      "name": "Lichtmannecker, Stefan",
      "penaltyPoints": 0,
      "points": 281,
      "rank": 16,
      "speed": 27.086111111111112,
      "taskStartTime": "15:53:26",
      "time": 5107,
    },
    Object {
      "competitionId": "CZ",
      "country": "BY | SFZ Ottengrüner Heide",
      "distance": 138.3,
      "glider": "ASG 29",
      "name": "Bauer, Hanns-Günther",
      "penaltyPoints": 0,
      "points": 280,
      "rank": 18,
      "speed": 27.027777777777775,
      "taskStartTime": "15:53:24",
      "time": 5118,
    },
    Object {
      "competitionId": "JH",
      "country": "HE | Rhönflug Gersfeld",
      "distance": 138.3,
      "glider": "ASW 27",
      "name": "Jörges, Chris",
      "penaltyPoints": 0,
      "points": 279,
      "rank": 19,
      "speed": 26.974999999999998,
      "taskStartTime": "15:57:37",
      "time": 5128,
    },
    Object {
      "competitionId": "P10",
      "country": "NI | AC Wolfsburg",
      "distance": 138.3,
      "glider": "ASW 27b",
      "name": "Schramek, Eike Björn",
      "penaltyPoints": 0,
      "points": 277,
      "rank": 20,
      "speed": 26.891666666666666,
      "taskStartTime": "15:54:58",
      "time": 5144,
    },
    Object {
      "competitionId": "LT",
      "country": "RP | DJK SFG Landau",
      "distance": 138.3,
      "glider": "ASG 29",
      "name": "Theisinger, Laurenz",
      "penaltyPoints": 0,
      "points": 274,
      "rank": 21,
      "speed": 26.766666666666666,
      "taskStartTime": "15:51:32",
      "time": 5168,
    },
    Object {
      "competitionId": "K",
      "country": "NW | LfV Greven",
      "distance": 138.3,
      "glider": "ASG 29 E",
      "name": "Klossok, Annette",
      "penaltyPoints": 0,
      "points": 274,
      "rank": 21,
      "speed": 26.75,
      "taskStartTime": "15:56:02",
      "time": 5171,
    },
    Object {
      "competitionId": "LEO",
      "country": "RP | DJK SFG Landau",
      "distance": 138.3,
      "glider": "ASG 29",
      "name": "Theisinger, Georg",
      "penaltyPoints": 0,
      "points": 272,
      "rank": 23,
      "speed": 26.694444444444443,
      "taskStartTime": "15:51:18",
      "time": 5182,
    },
    Object {
      "competitionId": "GO",
      "country": "NI | LSV Gifhorn",
      "distance": 138.3,
      "glider": "ASW 27b",
      "name": "Gottschalk, Felix",
      "penaltyPoints": 0,
      "points": 270,
      "rank": 24,
      "speed": 26.61111111111111,
      "taskStartTime": "15:50:45",
      "time": 5198,
    },
    Object {
      "competitionId": "FT",
      "country": "RP | DJK SFG Landau",
      "distance": 138.3,
      "glider": "ASW 27",
      "name": "Frey, Yannick",
      "penaltyPoints": 0,
      "points": 266,
      "rank": 25,
      "speed": 26.413888888888888,
      "taskStartTime": "15:51:29",
      "time": 5237,
    },
    Object {
      "competitionId": "GT",
      "country": "NI | LSV Gifhorn",
      "distance": 138.3,
      "glider": "ASW 27",
      "name": "Hagemann, Marianne",
      "penaltyPoints": 0,
      "points": 249,
      "rank": 26,
      "speed": 25.666666666666668,
      "taskStartTime": "15:54:01",
      "time": 5390,
    },
    Object {
      "competitionId": "1G",
      "country": "RP | AeC Landau",
      "distance": 138.3,
      "glider": "Ventus 2b",
      "name": "Bieler, Henrik",
      "penaltyPoints": 0,
      "points": 237,
      "rank": 27,
      "speed": 25.13888888888889,
      "taskStartTime": "15:49:02",
      "time": 5503,
    },
    Object {
      "competitionId": "DR",
      "country": "RP | FSV Neustadt/Wst",
      "distance": 138.3,
      "glider": "Ventus 2c",
      "name": "Schick, Marc",
      "penaltyPoints": 0,
      "points": 232,
      "rank": 28,
      "speed": 24.886111111111113,
      "taskStartTime": "15:49:08",
      "time": 5558,
    },
    Object {
      "competitionId": "EL",
      "country": "BW | FSV Sindelfingen",
      "distance": 138.3,
      "glider": "Discus 2b",
      "name": "Nölke, Sören",
      "penaltyPoints": 0,
      "points": 231,
      "rank": 29,
      "speed": 24.855555555555554,
      "taskStartTime": "15:59:19",
      "time": 5565,
    },
    Object {
      "competitionId": "G1",
      "country": "BY | FC Eichstätt",
      "distance": 138.3,
      "glider": "ASW 27",
      "name": "Böttigheimer, Christoph",
      "penaltyPoints": 79,
      "points": 214,
      "rank": 30,
      "speed": 27.63611111111111,
      "taskStartTime": "15:56:28",
      "time": 5005,
    },
    Object {
      "competitionId": "GK",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 138.3,
      "glider": "Ventus c",
      "name": "Kölle, Günter",
      "penaltyPoints": 0,
      "points": 211,
      "rank": 31,
      "speed": 23.98611111111111,
      "taskStartTime": "15:43:58",
      "time": 5767,
    },
    Object {
      "competitionId": "NH",
      "country": "BB | FK Brandenburg",
      "distance": 138.3,
      "glider": "LS 6",
      "name": "Horbrügger, Herbert",
      "penaltyPoints": 0,
      "points": 205,
      "rank": 32,
      "speed": 23.71388888888889,
      "taskStartTime": "15:50:04",
      "time": 5833,
    },
    Object {
      "competitionId": "KR",
      "country": "HE | SFC Riedelbach/Taunus",
      "distance": 138.3,
      "glider": "Ventus 2b",
      "name": "Malzacher, Sandra",
      "penaltyPoints": 0,
      "points": 196,
      "rank": 33,
      "speed": 23.291666666666664,
      "taskStartTime": "15:41:03",
      "time": 5939,
    },
    Object {
      "competitionId": "47",
      "country": "NW | AC Hagen",
      "distance": 138.3,
      "glider": "Ventus 2a",
      "name": "Edelhoff, Hans-Otto",
      "penaltyPoints": 10,
      "points": 189,
      "rank": 34,
      "speed": 23.444444444444446,
      "taskStartTime": "15:39:57",
      "time": 5900,
    },
    Object {
      "competitionId": "KB",
      "country": "HE | Mittelh.Verein Sontra",
      "distance": 138.3,
      "glider": "Ventus cT",
      "name": "Bethge, Sebastian",
      "penaltyPoints": 62,
      "points": 173,
      "rank": 35,
      "speed": 25.013888888888886,
      "taskStartTime": "15:45:30",
      "time": 5530,
    },
  ],
  "taskDescription": "Tagesaufgabe A - Racing-Task (RT)  138.3 km:  226Start Ost-> 043Burg-> 270Wollin A2 BAB077-> 231Stendal Borstel",
}
`;

exports[`scoreDay dm-15m-day6 1`] = `
Object {
  "class": "15m",
  "competition": Object {
    "description": "Stendal-Borstel (EDOV) 7/4/2017-7/14/2017",
    "name": "Deutsche Segelflug-Meisterschaft 15m/18m/OK",
  },
  "date": "2017-07-13",
  "remark": "Pmax=1000,0 Pdm=371,4 Pvm=628,6 Do=358,8 f=1,000 N=35 n1=35 n2=33
dnf=did not flyHöhe ZielkreisLuftraum",
  "results": Array [
    Object {
      "competitionId": "AS",
      "country": "BW | AC Esslingen",
      "distance": 358.8,
      "glider": "Ventus 2a",
      "name": "Späth, Alexander",
      "penaltyPoints": 0,
      "points": 1000,
      "rank": 1,
      "speed": 28.975,
      "taskStartTime": "14:24:40",
      "time": 12382,
    },
    Object {
      "competitionId": "PE",
      "country": "BW | FG Blaubeuren",
      "distance": 358.8,
      "glider": "Ventus 2a",
      "name": "Bauder, Sebastian",
      "penaltyPoints": 0,
      "points": 938,
      "rank": 2,
      "speed": 28.02222222222222,
      "taskStartTime": "14:08:22",
      "time": 12803,
    },
    Object {
      "competitionId": "V",
      "country": "HE | LSC Bad Homburg",
      "distance": 358.8,
      "glider": "Discus 2a",
      "name": "Omsels, Jan",
      "penaltyPoints": 0,
      "points": 933,
      "rank": 3,
      "speed": 27.952777777777776,
      "taskStartTime": "14:08:02",
      "time": 12835,
    },
    Object {
      "competitionId": "LEO",
      "country": "RP | DJK SFG Landau",
      "distance": 358.8,
      "glider": "ASG 29",
      "name": "Theisinger, Georg",
      "penaltyPoints": 0,
      "points": 913,
      "rank": 4,
      "speed": 27.644444444444442,
      "taskStartTime": "14:36:43",
      "time": 12977,
    },
    Object {
      "competitionId": "LT",
      "country": "RP | DJK SFG Landau",
      "distance": 358.8,
      "glider": "ASG 29",
      "name": "Theisinger, Laurenz",
      "penaltyPoints": 0,
      "points": 912,
      "rank": 5,
      "speed": 27.62222222222222,
      "taskStartTime": "14:36:31",
      "time": 12988,
    },
    Object {
      "competitionId": "GK",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 358.8,
      "glider": "Ventus c",
      "name": "Kölle, Günter",
      "penaltyPoints": 0,
      "points": 890,
      "rank": 6,
      "speed": 27.28611111111111,
      "taskStartTime": "14:09:03",
      "time": 13148,
    },
    Object {
      "competitionId": "4Z",
      "country": "BY | LSV Landshut",
      "distance": 358.8,
      "glider": "Ventus 2a",
      "name": "Lichtmannecker, Stefan",
      "penaltyPoints": 0,
      "points": 883,
      "rank": 7,
      "speed": 27.177777777777777,
      "taskStartTime": "14:35:23",
      "time": 13200,
    },
    Object {
      "competitionId": "2X",
      "country": "NI | LSG Waterkant-Zetel",
      "distance": 358.8,
      "glider": "Ventus 2cxa",
      "name": "Wollschläger, Swen",
      "penaltyPoints": 0,
      "points": 876,
      "rank": 8,
      "speed": 27.06388888888889,
      "taskStartTime": "14:35:43",
      "time": 13256,
    },
    Object {
      "competitionId": "EX",
      "country": "BW | FG Neckartal Köngen",
      "distance": 358.8,
      "glider": "Ventus 2ax",
      "name": "Eisele, Michael",
      "penaltyPoints": 0,
      "points": 796,
      "rank": 9,
      "speed": 25.836111111111112,
      "taskStartTime": "14:51:18",
      "time": 13886,
    },
    Object {
      "competitionId": "19",
      "country": "BW | FG Neckartal Köngen",
      "distance": 358.8,
      "glider": "Ventus 2a",
      "name": "Wettemann, Thomas",
      "penaltyPoints": 0,
      "points": 796,
      "rank": 9,
      "speed": 25.836111111111112,
      "taskStartTime": "14:51:17",
      "time": 13886,
    },
    Object {
      "competitionId": "DR",
      "country": "RP | FSV Neustadt/Wst",
      "distance": 358.8,
      "glider": "Ventus 2c",
      "name": "Schick, Marc",
      "penaltyPoints": 0,
      "points": 795,
      "rank": 11,
      "speed": 25.830555555555552,
      "taskStartTime": "14:44:26",
      "time": 13889,
    },
    Object {
      "competitionId": "FH",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 358.8,
      "glider": "Ventus 2a",
      "name": "Hein, Freddy",
      "penaltyPoints": 0,
      "points": 793,
      "rank": 12,
      "speed": 25.799999999999997,
      "taskStartTime": "14:24:37",
      "time": 13905,
    },
    Object {
      "competitionId": "1G",
      "country": "RP | AeC Landau",
      "distance": 358.8,
      "glider": "Ventus 2b",
      "name": "Bieler, Henrik",
      "penaltyPoints": 0,
      "points": 792,
      "rank": 13,
      "speed": 25.775000000000002,
      "taskStartTime": "14:44:20",
      "time": 13918,
    },
    Object {
      "competitionId": "FT",
      "country": "RP | DJK SFG Landau",
      "distance": 358.8,
      "glider": "ASW 27",
      "name": "Frey, Yannick",
      "penaltyPoints": 0,
      "points": 785,
      "rank": 14,
      "speed": 25.67222222222222,
      "taskStartTime": "14:36:43",
      "time": 13974,
    },
    Object {
      "competitionId": "PS",
      "country": "HE | Rhönflug Poppenhausen",
      "distance": 358.8,
      "glider": "ASW 27",
      "name": "Mihm, Julian",
      "penaltyPoints": 0,
      "points": 777,
      "rank": 15,
      "speed": 25.541666666666668,
      "taskStartTime": "14:42:21",
      "time": 14046,
    },
    Object {
      "competitionId": "DS",
      "country": "BY | SFG Donauwörth",
      "distance": 358.8,
      "glider": "Ventus 2a",
      "name": "Bauder, David",
      "penaltyPoints": 0,
      "points": 771,
      "rank": 16,
      "speed": 25.45,
      "taskStartTime": "14:29:19",
      "time": 14097,
    },
    Object {
      "competitionId": "L7",
      "country": "BW | LSR Aalen",
      "distance": 358.8,
      "glider": "ASW 27",
      "name": "Schwarzer, Steffen",
      "penaltyPoints": 0,
      "points": 770,
      "rank": 17,
      "speed": 25.438888888888886,
      "taskStartTime": "14:29:18",
      "time": 14103,
    },
    Object {
      "competitionId": "47",
      "country": "NW | AC Hagen",
      "distance": 358.8,
      "glider": "Ventus 2a",
      "name": "Edelhoff, Hans-Otto",
      "penaltyPoints": 0,
      "points": 754,
      "rank": 18,
      "speed": 25.194444444444443,
      "taskStartTime": "14:02:12",
      "time": 14240,
    },
    Object {
      "competitionId": "P10",
      "country": "NI | AC Wolfsburg",
      "distance": 358.8,
      "glider": "ASW 27b",
      "name": "Schramek, Eike Björn",
      "penaltyPoints": 0,
      "points": 741,
      "rank": 19,
      "speed": 25,
      "taskStartTime": "14:17:16",
      "time": 14350,
    },
    Object {
      "competitionId": "BK",
      "country": "BW | FSV Sindelfingen",
      "distance": 358.8,
      "glider": "ASG 29 E",
      "name": "Senne, Katrin U.",
      "penaltyPoints": 8,
      "points": 735,
      "rank": 20,
      "speed": 25.019444444444442,
      "taskStartTime": "14:48:00",
      "time": 14339,
    },
    Object {
      "competitionId": "KB",
      "country": "HE | Mittelh.Verein Sontra",
      "distance": 358.8,
      "glider": "Ventus cT",
      "name": "Bethge, Sebastian",
      "penaltyPoints": 0,
      "points": 679,
      "rank": 21,
      "speed": 24.041666666666664,
      "taskStartTime": "14:08:27",
      "time": 14922,
    },
    Object {
      "competitionId": "BS",
      "country": "BY | LSV Regensburg",
      "distance": 358.8,
      "glider": "ASG 29 E",
      "name": "Mühl, Stefanie",
      "penaltyPoints": 74,
      "points": 669,
      "rank": 22,
      "speed": 25.019444444444442,
      "taskStartTime": "14:48:05",
      "time": 14339,
    },
    Object {
      "competitionId": "DM",
      "country": "HH | Hamburger VfL",
      "distance": 358.8,
      "glider": "Ventus 2a",
      "name": "Büttner, Martin",
      "penaltyPoints": 0,
      "points": 662,
      "rank": 23,
      "speed": 23.775000000000002,
      "taskStartTime": "14:41:01",
      "time": 15090,
    },
    Object {
      "competitionId": "GT",
      "country": "NI | LSV Gifhorn",
      "distance": 358.8,
      "glider": "ASW 27",
      "name": "Hagemann, Marianne",
      "penaltyPoints": 0,
      "points": 660,
      "rank": 24,
      "speed": 23.74722222222222,
      "taskStartTime": "14:33:07",
      "time": 15108,
    },
    Object {
      "competitionId": "3G",
      "country": "NW | LfV Greven",
      "distance": 358.8,
      "glider": "Ventus 2b",
      "name": "Pfennig, Michael",
      "penaltyPoints": 0,
      "points": 659,
      "rank": 25,
      "speed": 23.738888888888887,
      "taskStartTime": "14:40:49",
      "time": 15112,
    },
    Object {
      "competitionId": "EL",
      "country": "BW | FSV Sindelfingen",
      "distance": 358.8,
      "glider": "Discus 2b",
      "name": "Nölke, Sören",
      "penaltyPoints": 0,
      "points": 657,
      "rank": 26,
      "speed": 23.702777777777776,
      "taskStartTime": "14:32:00",
      "time": 15136,
    },
    Object {
      "competitionId": "KR",
      "country": "HE | SFC Riedelbach/Taunus",
      "distance": 358.8,
      "glider": "Ventus 2b",
      "name": "Malzacher, Sandra",
      "penaltyPoints": 0,
      "points": 654,
      "rank": 27,
      "speed": 23.65277777777778,
      "taskStartTime": "14:19:00",
      "time": 15167,
    },
    Object {
      "competitionId": "VV",
      "country": "BW | FG Wolf Hirth",
      "distance": 358.8,
      "glider": "Ventus 2ax",
      "name": "Holighaus, Tilo",
      "penaltyPoints": 0,
      "points": 651,
      "rank": 28,
      "speed": 23.61111111111111,
      "taskStartTime": "13:56:41",
      "time": 15194,
    },
    Object {
      "competitionId": "GO",
      "country": "NI | LSV Gifhorn",
      "distance": 358.8,
      "glider": "ASW 27b",
      "name": "Gottschalk, Felix",
      "penaltyPoints": 0,
      "points": 645,
      "rank": 29,
      "speed": 23.519444444444446,
      "taskStartTime": "14:48:42",
      "time": 15253,
    },
    Object {
      "competitionId": "NH",
      "country": "BB | FK Brandenburg",
      "distance": 358.8,
      "glider": "LS 6",
      "name": "Horbrügger, Herbert",
      "penaltyPoints": 54,
      "points": 632,
      "rank": 30,
      "speed": 24.147222222222222,
      "taskStartTime": "14:48:38",
      "time": 14856,
    },
    Object {
      "competitionId": "CZ",
      "country": "BY | SFZ Ottengrüner Heide",
      "distance": 358.8,
      "glider": "ASG 29",
      "name": "Bauer, Hanns-Günther",
      "penaltyPoints": 8,
      "points": 594,
      "rank": 31,
      "speed": 22.855555555555554,
      "taskStartTime": "14:35:27",
      "time": 15696,
    },
    Object {
      "competitionId": "G1",
      "country": "BY | FC Eichstätt",
      "distance": 358.8,
      "glider": "ASW 27",
      "name": "Böttigheimer, Christoph",
      "penaltyPoints": 0,
      "points": 585,
      "rank": 32,
      "speed": 22.605555555555554,
      "taskStartTime": "14:07:09",
      "time": 15871,
    },
    Object {
      "competitionId": "JH",
      "country": "HE | Rhönflug Gersfeld",
      "distance": 358.8,
      "glider": "ASW 27",
      "name": "Jörges, Chris",
      "penaltyPoints": 0,
      "points": 549,
      "rank": 33,
      "speed": 22.044444444444444,
      "taskStartTime": "14:40:42",
      "time": 16275,
    },
    Object {
      "competitionId": "IY",
      "country": "BW | LSG Breisgau",
      "distance": 288.9,
      "glider": "ASW 27b",
      "name": "Lindenberg, Kai",
      "penaltyPoints": 0,
      "points": 299,
      "rank": 34,
      "speed": null,
      "taskStartTime": "14:08:54",
      "time": null,
    },
    Object {
      "competitionId": "K",
      "country": "NW | LfV Greven",
      "distance": 163.9,
      "glider": "ASG 29 E",
      "name": "Klossok, Annette",
      "penaltyPoints": 0,
      "points": 170,
      "rank": 35,
      "speed": null,
      "taskStartTime": "14:42:17",
      "time": null,
    },
  ],
  "taskDescription": "Tagesaufgabe B - Racing-Task (RT)  358.8 km:  227Start Sued-> 215Schoenebeck Za-> 050Crinitz BABbener-> 231Stendal Borstel",
}
`;

exports[`scoreDay dm-15m-day7 1`] = `
Object {
  "class": "15m",
  "competition": Object {
    "description": "Stendal-Borstel (EDOV) 7/4/2017-7/14/2017",
    "name": "Deutsche Segelflug-Meisterschaft 15m/18m/OK",
  },
  "date": "2017-07-14",
  "remark": "Pmax=600,0 Pdm=200,0 Pvm=400,0 Do=262,0 f=1,000 N=34 n1=34 n2=34
(*)=scoring time equal Tmin
dnf=did not fly",
  "results": Array [
    Object {
      "competitionId": "FH",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 236.7,
      "glider": "Ventus 2a",
      "name": "Hein, Freddy",
      "penaltyPoints": 0,
      "points": 600,
      "rank": 1,
      "speed": 32.875,
      "taskStartTime": "13:58:44",
      "time": 7040,
    },
    Object {
      "competitionId": "PS",
      "country": "HE | Rhönflug Poppenhausen",
      "distance": 246.7,
      "glider": "ASW 27",
      "name": "Mihm, Julian",
      "penaltyPoints": 0,
      "points": 600,
      "rank": 1,
      "speed": 32.875,
      "taskStartTime": "13:56:54",
      "time": 7505,
    },
    Object {
      "competitionId": "DM",
      "country": "HH | Hamburger VfL",
      "distance": 235.5,
      "glider": "Ventus 2a",
      "name": "Büttner, Martin",
      "penaltyPoints": 0,
      "points": 594,
      "rank": 3,
      "speed": 32.705555555555556,
      "taskStartTime": "13:58:21",
      "time": 7157,
    },
    Object {
      "competitionId": "AS",
      "country": "BW | AC Esslingen",
      "distance": 235.5,
      "glider": "Ventus 2a",
      "name": "Späth, Alexander",
      "penaltyPoints": 0,
      "points": 594,
      "rank": 3,
      "speed": 32.702777777777776,
      "taskStartTime": "13:58:44",
      "time": 7049,
    },
    Object {
      "competitionId": "BK",
      "country": "BW | FSV Sindelfingen",
      "distance": 234.5,
      "glider": "ASG 29 E",
      "name": "Senne, Katrin U.",
      "penaltyPoints": 0,
      "points": 589,
      "rank": 5,
      "speed": 32.56944444444444,
      "taskStartTime": "13:56:13",
      "time": 7155,
    },
    Object {
      "competitionId": "BS",
      "country": "BY | LSV Regensburg",
      "distance": 234.4,
      "glider": "ASG 29 E",
      "name": "Mühl, Stefanie",
      "penaltyPoints": 0,
      "points": 588,
      "rank": 6,
      "speed": 32.55555555555556,
      "taskStartTime": "13:56:10",
      "time": 7192,
    },
    Object {
      "competitionId": "1G",
      "country": "RP | AeC Landau",
      "distance": 233.7,
      "glider": "Ventus 2b",
      "name": "Bieler, Henrik",
      "penaltyPoints": 0,
      "points": 585,
      "rank": 7,
      "speed": 32.45833333333333,
      "taskStartTime": "14:00:10",
      "time": 6915,
    },
    Object {
      "competitionId": "DR",
      "country": "RP | FSV Neustadt/Wst",
      "distance": 233,
      "glider": "Ventus 2c",
      "name": "Schick, Marc",
      "penaltyPoints": 0,
      "points": 581,
      "rank": 8,
      "speed": 32.36111111111111,
      "taskStartTime": "14:00:33",
      "time": 6875,
    },
    Object {
      "competitionId": "GO",
      "country": "NI | LSV Gifhorn",
      "distance": 247.9,
      "glider": "ASW 27b",
      "name": "Gottschalk, Felix",
      "penaltyPoints": 0,
      "points": 566,
      "rank": 9,
      "speed": 31.95,
      "taskStartTime": "13:58:00",
      "time": 7759,
    },
    Object {
      "competitionId": "V",
      "country": "HE | LSC Bad Homburg",
      "distance": 261.4,
      "glider": "Discus 2a",
      "name": "Omsels, Jan",
      "penaltyPoints": 0,
      "points": 561,
      "rank": 10,
      "speed": 31.81111111111111,
      "taskStartTime": "14:00:48",
      "time": 8217,
    },
    Object {
      "competitionId": "EL",
      "country": "BW | FSV Sindelfingen",
      "distance": 246.2,
      "glider": "Discus 2b",
      "name": "Nölke, Sören",
      "penaltyPoints": 0,
      "points": 557,
      "rank": 11,
      "speed": 31.688888888888886,
      "taskStartTime": "13:53:19",
      "time": 7770,
    },
    Object {
      "competitionId": "PE",
      "country": "BW | FG Blaubeuren",
      "distance": 262,
      "glider": "Ventus 2a",
      "name": "Bauder, Sebastian",
      "penaltyPoints": 0,
      "points": 548,
      "rank": 12,
      "speed": 31.45,
      "taskStartTime": "14:00:49",
      "time": 8331,
    },
    Object {
      "competitionId": "VV",
      "country": "BW | FG Wolf Hirth",
      "distance": 228.9,
      "glider": "Ventus 2ax",
      "name": "Holighaus, Tilo",
      "penaltyPoints": 0,
      "points": 533,
      "rank": 13,
      "speed": 31.044444444444444,
      "taskStartTime": "13:58:14",
      "time": 7373,
    },
    Object {
      "competitionId": "NH",
      "country": "BB | FK Brandenburg",
      "distance": 247.8,
      "glider": "LS 6",
      "name": "Horbrügger, Herbert",
      "penaltyPoints": 0,
      "points": 528,
      "rank": 14,
      "speed": 30.90277777777778,
      "taskStartTime": "13:57:45",
      "time": 8019,
    },
    Object {
      "competitionId": "FT",
      "country": "RP | DJK SFG Landau",
      "distance": 220.2,
      "glider": "ASW 27",
      "name": "Frey, Yannick",
      "penaltyPoints": 0,
      "points": 508,
      "rank": 15,
      "speed": 30.36111111111111,
      "taskStartTime": "14:01:59",
      "time": 7252,
    },
    Object {
      "competitionId": "KR",
      "country": "HE | SFC Riedelbach/Taunus",
      "distance": 229.9,
      "glider": "Ventus 2b",
      "name": "Malzacher, Sandra",
      "penaltyPoints": 0,
      "points": 506,
      "rank": 16,
      "speed": 30.31111111111111,
      "taskStartTime": "13:55:06",
      "time": 7585,
    },
    Object {
      "competitionId": "DS",
      "country": "BY | SFG Donauwörth",
      "distance": 239.2,
      "glider": "Ventus 2a",
      "name": "Bauder, David",
      "penaltyPoints": 0,
      "points": 503,
      "rank": 17,
      "speed": 30.211111111111112,
      "taskStartTime": "14:01:01",
      "time": 7916,
    },
    Object {
      "competitionId": "L7",
      "country": "BW | LSR Aalen",
      "distance": 238.9,
      "glider": "ASW 27",
      "name": "Schwarzer, Steffen",
      "penaltyPoints": 0,
      "points": 503,
      "rank": 17,
      "speed": 30.205555555555552,
      "taskStartTime": "14:01:08",
      "time": 7910,
    },
    Object {
      "competitionId": "19",
      "country": "BW | FG Neckartal Köngen",
      "distance": 217.4,
      "glider": "Ventus 2a",
      "name": "Wettemann, Thomas",
      "penaltyPoints": 0,
      "points": 502,
      "rank": 19,
      "speed": 30.2,
      "taskStartTime": "14:06:16",
      "time": 6978,
    },
    Object {
      "competitionId": "EX",
      "country": "BW | FG Neckartal Köngen",
      "distance": 217.3,
      "glider": "Ventus 2ax",
      "name": "Eisele, Michael",
      "penaltyPoints": 0,
      "points": 502,
      "rank": 19,
      "speed": 30.18611111111111,
      "taskStartTime": "14:06:54",
      "time": 6976,
    },
    Object {
      "competitionId": "2X",
      "country": "NI | LSG Waterkant-Zetel",
      "distance": 214.5,
      "glider": "Ventus 2cxa",
      "name": "Wollschläger, Swen",
      "penaltyPoints": 0,
      "points": 487,
      "rank": 21,
      "speed": 29.788888888888888,
      "taskStartTime": "13:54:30",
      "time": 7159,
    },
    Object {
      "competitionId": "LT",
      "country": "RP | DJK SFG Landau",
      "distance": 218.2,
      "glider": "ASG 29",
      "name": "Theisinger, Laurenz",
      "penaltyPoints": 0,
      "points": 475,
      "rank": 22,
      "speed": 29.45,
      "taskStartTime": "14:01:34",
      "time": 7409,
    },
    Object {
      "competitionId": "LEO",
      "country": "RP | DJK SFG Landau",
      "distance": 216.9,
      "glider": "ASG 29",
      "name": "Theisinger, Georg",
      "penaltyPoints": 0,
      "points": 472,
      "rank": 23,
      "speed": 29.35833333333333,
      "taskStartTime": "14:01:55",
      "time": 7388,
    },
    Object {
      "competitionId": "K",
      "country": "NW | LfV Greven",
      "distance": 208.7,
      "glider": "ASG 29 E",
      "name": "Klossok, Annette",
      "penaltyPoints": 0,
      "points": 458,
      "rank": 24,
      "speed": 28.986111111111107,
      "taskStartTime": "13:53:18",
      "time": 7184,
    },
    Object {
      "competitionId": "4Z",
      "country": "BY | LSV Landshut",
      "distance": 208.4,
      "glider": "Ventus 2a",
      "name": "Lichtmannecker, Stefan",
      "penaltyPoints": 0,
      "points": 457,
      "rank": 25,
      "speed": 28.944444444444443,
      "taskStartTime": "14:02:16",
      "time": 7032,
    },
    Object {
      "competitionId": "CZ",
      "country": "BY | SFZ Ottengrüner Heide",
      "distance": 208.2,
      "glider": "ASG 29",
      "name": "Bauer, Hanns-Günther",
      "penaltyPoints": 0,
      "points": 456,
      "rank": 26,
      "speed": 28.916666666666664,
      "taskStartTime": "14:02:24",
      "time": 7013,
    },
    Object {
      "competitionId": "47",
      "country": "NW | AC Hagen",
      "distance": 227.6,
      "glider": "Ventus 2a",
      "name": "Edelhoff, Hans-Otto",
      "penaltyPoints": 0,
      "points": 451,
      "rank": 27,
      "speed": 28.802777777777777,
      "taskStartTime": "13:57:13",
      "time": 7902,
    },
    Object {
      "competitionId": "P10",
      "country": "NI | AC Wolfsburg",
      "distance": 204.2,
      "glider": "ASW 27b",
      "name": "Schramek, Eike Björn",
      "penaltyPoints": 0,
      "points": 435,
      "rank": 28,
      "speed": 28.361111111111107,
      "taskStartTime": "14:01:49",
      "time": 6821,
    },
    Object {
      "competitionId": "GT",
      "country": "NI | LSV Gifhorn",
      "distance": 204.2,
      "glider": "ASW 27",
      "name": "Hagemann, Marianne",
      "penaltyPoints": 0,
      "points": 435,
      "rank": 28,
      "speed": 28.355555555555554,
      "taskStartTime": "14:01:07",
      "time": 7064,
    },
    Object {
      "competitionId": "G1",
      "country": "BY | FC Eichstätt",
      "distance": 211.7,
      "glider": "ASW 27",
      "name": "Böttigheimer, Christoph",
      "penaltyPoints": 0,
      "points": 420,
      "rank": 30,
      "speed": 27.938888888888886,
      "taskStartTime": "13:53:21",
      "time": 7576,
    },
    Object {
      "competitionId": "GK",
      "country": "BW | FG Schwäbisch-Gmünd",
      "distance": 229.9,
      "glider": "Ventus c",
      "name": "Kölle, Günter",
      "penaltyPoints": 0,
      "points": 405,
      "rank": 31,
      "speed": 27.54722222222222,
      "taskStartTime": "13:56:20",
      "time": 8346,
    },
    Object {
      "competitionId": "KB",
      "country": "HE | Mittelh.Verein Sontra",
      "distance": 195.6,
      "glider": "Ventus cT",
      "name": "Bethge, Sebastian",
      "penaltyPoints": 0,
      "points": 392,
      "rank": 32,
      "speed": 27.166666666666664,
      "taskStartTime": "13:58:06",
      "time": 7035,
    },
    Object {
      "competitionId": "3G",
      "country": "NW | LfV Greven",
      "distance": 212.2,
      "glider": "Ventus 2b",
      "name": "Pfennig, Michael",
      "penaltyPoints": 0,
      "points": 310,
      "rank": 33,
      "speed": 24.93611111111111,
      "taskStartTime": "13:58:29",
      "time": 8509,
    },
    Object {
      "competitionId": "JH",
      "country": "HE | Rhönflug Gersfeld",
      "distance": 239.7,
      "glider": "ASW 27",
      "name": "Jörges, Chris",
      "penaltyPoints": 0,
      "points": 273,
      "rank": 34,
      "speed": 23.919444444444444,
      "taskStartTime": "13:57:05",
      "time": 10021,
    },
    Object {
      "competitionId": "IY",
      "country": "BW | LSG Breisgau",
      "distance": null,
      "glider": "ASW 27b",
      "name": "Lindenberg, Kai",
      "penaltyPoints": 0,
      "points": null,
      "rank": NaN,
      "speed": null,
      "taskStartTime": null,
      "time": null,
    },
  ],
  "taskDescription": "Tagesaufgabe B - Speed Assigned Area Task (AAT) (Tmin=02:00)  152.0 km < D < 366.7 km:  225Start Nord-> 056Doemitz B191XElb-> 197Rechlin Laerz-> 231Stendal Borstel",
}
`;

exports[`scoreDay stoelln17-std-day1 1`] = `
Object {
  "class": "Std",
  "competition": Object {
    "description": "SLP Stölln/Rhinow 7/27/2017-8/3/2017",
    "name": "Gollenberg Cup 2017",
  },
  "date": "2017-07-28",
  "remark": "Pmax=601,3 Pdm=267,2 Pvm=334,0 Do=198,9 f=1,000 N=18 n1=16 n2=15
(*)=scoring time equal Tmin
dnf=did not fly",
  "results": Array [
    Object {
      "competitionId": "EX",
      "country": "BB",
      "distance": 198.9,
      "glider": "LS8",
      "name": "Gäde, Julius",
      "penaltyPoints": 0,
      "points": 601,
      "rank": 1,
      "speed": 27.577777777777776,
      "taskStartTime": "13:07:15",
      "time": 7211,
    },
    Object {
      "competitionId": "8A",
      "country": "BB",
      "distance": 194.4,
      "glider": "LS8neo",
      "name": "Tiebel, Daniel",
      "penaltyPoints": 0,
      "points": 580,
      "rank": 2,
      "speed": 26.99722222222222,
      "taskStartTime": "13:07:25",
      "time": 7117,
    },
    Object {
      "competitionId": "LB",
      "country": "BL",
      "distance": 184.7,
      "glider": "LS8",
      "name": "Blattmann, Lukas",
      "penaltyPoints": 0,
      "points": 517,
      "rank": 3,
      "speed": 25.25,
      "taskStartTime": "13:06:16",
      "time": 7315,
    },
    Object {
      "competitionId": "GP",
      "country": "BY",
      "distance": 179.1,
      "glider": "LS8neo",
      "name": "Lauer, Philipp",
      "penaltyPoints": 0,
      "points": 491,
      "rank": 4,
      "speed": 24.544444444444444,
      "taskStartTime": "13:08:03",
      "time": 7296,
    },
    Object {
      "competitionId": "73",
      "country": "NRW",
      "distance": 181,
      "glider": "Discus 2b",
      "name": "Kwiatkowski, Ron",
      "penaltyPoints": 0,
      "points": 474,
      "rank": 5,
      "speed": 24.080555555555556,
      "taskStartTime": "13:08:23",
      "time": 7518,
    },
    Object {
      "competitionId": "NW1",
      "country": "NRW",
      "distance": 173.4,
      "glider": "Discus 2b",
      "name": "Langner, Thorben",
      "penaltyPoints": 0,
      "points": 462,
      "rank": 6,
      "speed": 23.75,
      "taskStartTime": "13:07:08",
      "time": 7301,
    },
    Object {
      "competitionId": "BW3",
      "country": "BW",
      "distance": 189.7,
      "glider": "Discus 2b",
      "name": "Hiller, Chris",
      "penaltyPoints": 0,
      "points": 456,
      "rank": 7,
      "speed": 23.580555555555556,
      "taskStartTime": "13:11:36",
      "time": 8047,
    },
    Object {
      "competitionId": "X",
      "country": "NI",
      "distance": 173.7,
      "glider": "LS8",
      "name": "Ahrens, Wilm",
      "penaltyPoints": 0,
      "points": 436,
      "rank": 8,
      "speed": 23.033333333333335,
      "taskStartTime": "13:07:40",
      "time": 7540,
    },
    Object {
      "competitionId": "GO",
      "country": "BW",
      "distance": 161.8,
      "glider": "Discus 2b",
      "name": "Linkner, Lars",
      "penaltyPoints": 0,
      "points": 416,
      "rank": 9,
      "speed": 22.469444444444445,
      "taskStartTime": "13:07:59",
      "time": 6879,
    },
    Object {
      "competitionId": "WS",
      "country": "NRW",
      "distance": 157.8,
      "glider": "LS8",
      "name": "Löser, Hendrik",
      "penaltyPoints": 0,
      "points": 395,
      "rank": 10,
      "speed": 21.913888888888888,
      "taskStartTime": "13:07:56",
      "time": 6789,
    },
    Object {
      "competitionId": "TX",
      "country": "NI",
      "distance": 161.7,
      "glider": "LS8",
      "name": "Polej, Dennis",
      "penaltyPoints": 0,
      "points": 341,
      "rank": 11,
      "speed": 20.42777777777778,
      "taskStartTime": "13:12:57",
      "time": 7914,
    },
    Object {
      "competitionId": "S1",
      "country": "RP",
      "distance": 163,
      "glider": "LS8",
      "name": "Dibbern, Johannes",
      "penaltyPoints": 0,
      "points": 341,
      "rank": 11,
      "speed": 20.419444444444444,
      "taskStartTime": "13:12:53",
      "time": 7983,
    },
    Object {
      "competitionId": "BI",
      "country": "HE",
      "distance": 160.8,
      "glider": "LS8",
      "name": "Schlautmann, Nils",
      "penaltyPoints": 0,
      "points": 328,
      "rank": 13,
      "speed": 20.05833333333333,
      "taskStartTime": "13:10:44",
      "time": 8019,
    },
    Object {
      "competitionId": "PL",
      "country": "RP",
      "distance": 161.9,
      "glider": "ASW28",
      "name": "Frey, Yannick",
      "penaltyPoints": 0,
      "points": 327,
      "rank": 14,
      "speed": 20.033333333333335,
      "taskStartTime": "13:12:51",
      "time": 8082,
    },
    Object {
      "competitionId": "70",
      "country": "NRW",
      "distance": 160.3,
      "glider": "LS8neo",
      "name": "Fecker, Nils",
      "penaltyPoints": 0,
      "points": 324,
      "rank": 15,
      "speed": 19.95,
      "taskStartTime": "13:10:27",
      "time": 8037,
    },
    Object {
      "competitionId": "4J",
      "country": "BY",
      "distance": 135.8,
      "glider": "Discus 2c",
      "name": "Heinig, Jan",
      "penaltyPoints": 0,
      "points": 267,
      "rank": 16,
      "speed": 17.055555555555554,
      "taskStartTime": "13:18:02",
      "time": 7964,
    },
    Object {
      "competitionId": "HW",
      "country": "NRW",
      "distance": 48.6,
      "glider": "LS8neo",
      "name": "Klomp, Wilhelm-Alexander",
      "penaltyPoints": 0,
      "points": 65,
      "rank": 17,
      "speed": null,
      "taskStartTime": "13:07:50",
      "time": null,
    },
    Object {
      "competitionId": "TM",
      "country": "NI",
      "distance": 27.8,
      "glider": "Discus 2c",
      "name": "Josuttis, Benjamin",
      "penaltyPoints": 0,
      "points": 37,
      "rank": 18,
      "speed": null,
      "taskStartTime": "13:13:28",
      "time": null,
    },
  ],
  "taskDescription": "Tagesaufgabe A - Speed Assigned Area Task (AAT) (Tmin=02:00)  82.0 km < D < 429.8 km:  000Abflugpunkt Nord-> 068Lenzen B1-> 053Graeben-> 003Anflugpunkt Ost-> 121Stoelln",
}
`;
